fix(TypeAheadSelect): Fix input height overflow issue without breaking IE11 compatibility (#1369)
Fixes #1362 (replaces original fix for #413)

--- a/packages/patternfly-3/patternfly-react/sass/patternfly-react/_type-ahead-select.scss
+++ b/packages/patternfly-3/patternfly-react/sass/patternfly-react/_type-ahead-select.scss
@@ -4,8 +4,8 @@
   padding: 2px 6px;
 }
 
-.rbt-input-multi {
-  height: fit-content;
+.form-control.rbt-input-multi {
+  height: auto;
 }
 
 .rbt-menu.dropdown-menu {
